--- a/app/templates/list/viz.html
+++ b/app/templates/list/viz.html
@@ -12,6 +12,7 @@ VISLists, VIS 25 - All the Papers and Citations
 	<script src="{{ url_for('static', filename='bower_components/angular-bindonce/bindonce.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='bower_components/angular-virtual-scroll/angular-virtual-scroll.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='libs/d3.v3.js') }}"></script>
+	<script src="{{ url_for('static', filename='libs/jStorage/jstorage.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/list/list.js') }}"></script>
 	<script src="{{ url_for('static', filename='libs/jquery.noty.packaged.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='libs/bootstrap/js/bootstrap.min.js') }}"></script>
