Reusable widgets added

--- a/app/templates/base_layout_without_navbar.html
+++ b/app/templates/base_layout_without_navbar.html
@@ -17,7 +17,8 @@
 	{% block head_script_content %}{% endblock %}
 	<title>{% block title %}{% endblock %}</title>
 </head>
-<body id="bodyContainer" ng-controller="JigListViewController"> <!--id="bodyContainer" ng-controller="JigViewController" -->
+<!-- ng-controller="JigListViewController" -->
+<body id="bodyContainer"> <!--id="bodyContainer" ng-controller="JigViewController" -->
 	
 	<div id="layout-html-content">
 		{% block layout_content %}{% endblock %}
