--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -80,14 +80,6 @@ input[readonly] {
 	margin-top: 50px;
 }
 
-.padding-left-0 {
-	padding-left: 0px !important;
-}
-
-.padding-left-25 {
-	padding-left: 25px !important;
-}
-
 .padding-top-2{
 	padding-top: 2px !important;
 }
@@ -120,8 +112,16 @@ input[readonly] {
 	padding-bottom: 0px !important;
 }
 
+.padding-bottom-2{
+	padding-bottom: 2px !important;
+}
+
 .padding-left-0{
 	padding-left: 0px !important;
+}
+
+.padding-left-25 {
+	padding-left: 25px !important;
 }
 
 .padding-left-35{
@@ -134,6 +134,11 @@ input[readonly] {
 
 .padding-3{
 	padding: 3px !important;
+}
+
+.padding-5{
+	padding: 5px !important;
+	padding-bottom: 7px !important;
 }
 
 /*.label{
@@ -221,7 +226,9 @@ input[readonly] {
 }
 
 .colored-row{
-	background: #FAFAFA;
+	/*background: #FAFAFA;*/
+	/*border: 2px solid #DDD;*/
+  	/*border-radius: 5px;*/
 }
 
 /* Overwrite the default to keep the scrollbar always visible */
