--- a/app/static/css/list.css
+++ b/app/static/css/list.css
@@ -41,7 +41,7 @@ body {
 	/*height: 675px;*/
 	margin: 0 0 0 0;
 	padding-top: 10px;
-	background: #FAFAFA;
+	/*background: #FAFAFA;*/
 	overflow-y: hidden;
 	overflow-x: scroll;
 }
