--- a/app/templates/viz.html
+++ b/app/templates/viz.html
@@ -7,6 +7,7 @@
 {% block head_script_content %}
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/list.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/document.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/grid.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/add-visualization.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/visualization-widget.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-slider.css') }}">
