--- a/app/templates/viz.html
+++ b/app/templates/viz.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/list.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/document.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/grid.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/wordtree.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/add-visualization.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/visualization-widget.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-slider.css') }}">
@@ -69,6 +70,15 @@
 	<script src="{{ url_for('static', filename='js/viz.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/directives/addVisualization.js') }}"></script>
 	<script src="{{ url_for('static', filename='libs/jStorage/jstorage.min.js') }}"></script>
+	
+	<!-- WordTree View Scripts -->
+	<script src="{{ url_for('static', filename='js/wordtree.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/unicode.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/wordtree/wordtree.service.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/wordtree/wordtree.factory.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/wordtree/wordtree.directive.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/wordtree/wordtree.controller.js') }}"></script>
+	
 	<script src="{{ url_for('static', filename='js/list/list.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/document/document.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/grid/grid.js') }}"></script>
