--- a/app/templates/base_layout_without_navbar.html
+++ b/app/templates/base_layout_without_navbar.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-ng-app="ngJigsawListApp"> <!-- data-ng-app="ngJigsawApp" -->
+<html lang="en"> <!-- data-ng-app="ngJigsawApp" -->
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
